# phyton

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
phyton/core/: abc.py  simulation.py
tests/: test_core.py
