[build-system]
requires = ["pyproject-toml >= 0.0.10"]
build-backend = "pyproject_toml.build_system.build_backend"

[project]
name = "phyton"
version = "1.0.0a1"
description = "the smallest part of a stem, root, or leaf that when severed may grow into a new plant"
authors = [{ name = "Tang Ziya", email = "tcztzy@hotmail.com" }]
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["plant", "simulation", "model"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
exclude_lines = ["pragma: no cover", "abstract"]

[tool.isort]
profile = "black"

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pyproject-toml]
packages = ["phyton"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{py37,37,38,39}
isolated_build = True
[testenv]
deps =
    pytest
    pytest-cov
commands = pytest --cov=phyton
"""
